Most tests fixed